# ucc-hackathon-henry-plots

./: .env.example  README.md  environment.lock.yml  environment.txt  pyproject.toml  requirements.txt  settings.ini  tox.ini
nbs/evaluation/: Evaluation-bham-4x-sharing.ipynb  ai-schematic.ipynb  ccs-figures.ipynb  diagnostics.ipynb  eval-at-60km-pretty.ipynb  fss.ipynb  lo-data-figures.ipynb  perspective-paper-figures.ipynb  pretty-figures.ipynb  raw-diffusion-predictions.ipynb  samples.ipynb  sampling-variability-focus.ipynb  training-variability-focus.ipynb  uq.ipynb  variability-data-reduction-checks.ipynb
nbs/evaluation/parameters/: paper-lo-data-12em.yml  paper-lo-data.yml  paper.yml  perspective-paper-samples.yml  qm.yml  replication-12em-paper.yml
nbs/exploration/: domains.ipynb  engineered features.ipynb  moose data.ipynb  moose grids.ipynb  regridded data.ipynb  split-data.ipynb  target-resolutions.ipynb  testing-data-pipeline.ipynb
nbs/exploration/datasets/: vort 60km-1x london.ipynb  vort 60km-4x bham.ipynb  vort gcmx-1x london.ipynb  vort gcmx-4x bham.ipynb
nbs/exploration/variables/: pr.ipynb  spechum.ipynb  temp.ipynb  vorticity850.ipynb  wetbulbpott.ipynb  xwind.ipynb
src/mlde_notebooks/: __init__.py  ccs.py  data.py  distribution.py  fss.py  psd.py  samples.py  significance.py  uncertainty.py  wet_dry.py
