[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlde_notebooks"
version = "0.0.1"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for notebooks evaluating approaches to emulate a CPM and downscale precipitation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde-notebooks"
"Bug Tracker" = "https://github.com/henryaddison/mlde-notebooks/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
extend-exclude = '^/nbs/'
